--- a/renewal_main/style/header.css
+++ b/renewal_main/style/header.css
@@ -1,4 +1,4 @@
-.header-wrapper {
+.header-con {
   position: absolute;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
@@ -8,7 +8,7 @@
   transition: 0.5s;
 }
 
-.header-wrapper:hover {
+.header-con:hover {
   background-color: white;
 }
 
@@ -29,14 +29,14 @@
   cursor: pointer;
 }
 
-.lang-btn-wrapper {
+.lang-btn-con {
   display: flex;
   justify-content: end;
   align-items: center;
 }
 
-.lang-btn {
-  padding: 10px;
+.lang-btn-box {
+  padding: 10px 16px;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -46,14 +46,98 @@
   border-radius: 20px;
 }
 
-.lang-btn span {
-  color: rgba(255, 255, 255, 0.3);
+.lang-btn-box span {
+  color: rgba(255, 255, 255, 0.5);
 }
 
-.lang-active {
-  color: white;
+.kr,
+.en {
+  cursor: pointer;
 }
 
-.lang-btn img {
+.lang-btn-box img {
   width: 22px;
+}
+
+.mb-header-con {
+  display: none;
+}
+
+@media all and (max-width: 1023px) {
+  .header-con {
+    display: none;
+  }
+  .mb-header-con {
+    display: flex;
+    width: 100%;
+    position: fixed;
+    padding: 12px 0px;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .mb-logo {
+    width: 163px;
+    padding-left: 20px;
+  }
+
+  .mb-menu-icon {
+    width: 20px;
+  }
+
+  .mb-header-right-box {
+    display: flex;
+    padding-right: 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .mb-lang-box {
+    display: flex;
+    border-radius: 15px;
+    border: solid 1px white;
+    gap: 8px;
+    padding: 5px 10px;
+  }
+
+  .mb-lang-box span {
+    color: white;
+  }
+
+  .mb-lang-box img {
+    width: 18px;
+  }
+  .mb-menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    padding: 30px 0px;
+    margin-top: 55px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    overflow-y: auto;
+    gap: 40px;
+  }
+
+  .mb-menu-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .mb-menu-title h2 {
+    margin-left: 20px;
+  }
+  .mb-menu-title img {
+    margin-right: 20px;
+    width: 20px;
+  }
+  .mb-menu-base {
+    padding: 20px 40px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    font-size: 16px;
+  }
 }
