--- a/renewal_main/style/slide.css
+++ b/renewal_main/style/slide.css
@@ -31,7 +31,7 @@ body {
   word-break: keep-all;
 }
 
-.slide-wrapper {
+.slide-con {
   position: relative;
   overflow: hidden;
   width: 100vw;
@@ -73,7 +73,7 @@ body {
   width: 700px;
 }
 
-.slide-bottom-wrapper {
+.slide-bottom-con {
   position: absolute;
   min-width: 1280px;
   width: 100%;
@@ -90,14 +90,14 @@ body {
   min-width: 1280px;
 }
 
-.slide-time-wrapper {
+.slide-time-box {
   display: flex;
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-.timebar-wrapper {
+.timebar-box {
   background-color: rgba(255, 255, 255, 0.3);
   width: 300px;
 }
@@ -149,7 +149,7 @@ body {
   }
   .title {
     font-size: 24px;
-    padding: 0px 20px;
+    padding: 20px 20px;
     width: 80%;
   }
   .sub {
@@ -158,7 +158,7 @@ body {
     width: 80%;
   }
 
-  .slide-bottom-wrapper {
+  .slide-bottom-con {
     min-width: 100%;
     height: 100%;
   }
@@ -173,7 +173,7 @@ body {
     min-width: 100%;
   }
 
-  .slide-time-wrapper {
+  .slide-time-box {
     padding-left: 20px;
   }
 
@@ -181,7 +181,7 @@ body {
     padding-right: 20px;
   }
 
-  .timebar-wrapper {
+  .timebar-box {
     width: 100px;
   }
 
