--- a/renewal_main/style/header.css
+++ b/renewal_main/style/header.css
@@ -1,15 +1,11 @@
 .header-con {
-  position: absolute;
+  position: fixed;
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 2fr 3fr 1.5fr;
   align-items: center;
   height: 100px;
   width: 100%;
   transition: 0.5s;
-}
-
-.header-con:hover {
-  background-color: white;
 }
 
 .header-logo img {
@@ -20,13 +16,55 @@
 .header-menu {
   color: white;
   font-size: 18px;
-  text-align: center;
+  font-weight: 600;
+  height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .header-menu span {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: start;
   cursor: pointer;
+}
+
+.header-menu span:hover {
+  color: #f26933;
+}
+
+.header-sub-menu-con {
+  position: absolute;
+  background-color: white;
+  top: 101px;
+  width: 100%;
+  display: none;
+  grid-template-columns: 2fr 3fr 1.5fr;
+}
+
+.header-sub-menu-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.header-sub-menu {
+  display: flex;
+  flex-direction: column;
+  padding: 40px 0px;
+  gap: 16px;
+}
+
+.header-sub-menu > a {
+  text-decoration: none;
+  color: black;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.header-sub-menu > a:hover {
+  text-decoration: underline;
+  color: #f26933;
 }
 
 .lang-btn-con {
@@ -59,85 +97,60 @@
   width: 22px;
 }
 
-.mb-header-con {
+.menu-btn {
   display: none;
 }
 
 @media all and (max-width: 1023px) {
   .header-con {
-    display: none;
-  }
-  .mb-header-con {
     display: flex;
-    width: 100%;
-    position: fixed;
+    justify-content: space-between;
+    height: 30px;
     padding: 12px 0px;
-    align-items: center;
-    justify-content: space-between;
   }
-  .mb-logo {
-    width: 163px;
-    padding-left: 20px;
-  }
-
-  .mb-menu-icon {
-    width: 20px;
-  }
-
-  .mb-header-right-box {
-    display: flex;
-    padding-right: 20px;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-
-  .mb-lang-box {
-    display: flex;
-    border-radius: 15px;
-    border: solid 1px white;
-    gap: 8px;
-    padding: 5px 10px;
-  }
-
-  .mb-lang-box span {
-    color: white;
-  }
-
-  .mb-lang-box img {
-    width: 18px;
-  }
-  .mb-menu {
+  .header-menu {
     display: none;
-    flex-direction: column;
-    position: absolute;
-    padding: 30px 0px;
-    margin-top: 55px;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    overflow-y: auto;
-    gap: 40px;
   }
 
-  .mb-menu-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  .header-sub-menu-con {
+    display: none;
   }
-  .mb-menu-title h2 {
+
+  .hr,
+  .en {
+    display: none;
+  }
+
+  .header-logo > img {
+    width: 163px;
     margin-left: 20px;
   }
-  .mb-menu-title img {
+
+  .lang-btn-box {
+    padding: 5px 10px;
     margin-right: 20px;
+  }
+
+  .lang-btn-box span {
+    font-size: 14px;
+  }
+
+  .lang-btn-box img {
+    width: 18px;
+  }
+
+  .menu-btn {
+    display: flex;
+    margin-right: 20px;
+  }
+
+  .menu-btn img {
     width: 20px;
   }
-  .mb-menu-base {
-    padding: 20px 40px;
-    height: 100%;
+
+  .mb-header-right-con {
     display: flex;
-    flex-direction: column;
-    gap: 30px;
-    font-size: 16px;
+    justify-content: center;
+    align-items: center;
   }
 }
