--- a/renewal_main/style/header.css
+++ b/renewal_main/style/header.css
@@ -1,11 +1,11 @@
 header {
   box-sizing: border-box;
   position: fixed;
+  display: grid;
+  grid-template-columns: 3fr 6fr 3fr;
   background-color: transparent;
   width: 100%;
   z-index: 1;
-  display: grid;
-  grid-template-columns: 3fr 6fr 3fr;
   height: 100px;
   padding: 0px 70px;
   align-items: center;
@@ -19,16 +19,30 @@ header {
 .header__menu-con {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  /* text-align: center; */
   align-items: center;
   height: 100%;
   padding-left: 100px;
 }
 
-.header__menu-box span {
+.header__menu-title {
   color: white;
   font-size: 18px;
   font-weight: 600;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.header__menu-box {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  height: 100%;
+  align-items: center;
+}
+
+.header__menu-box img {
+  display: none;
+  width: 20px;
 }
 
 .header__sub-menu-con {
@@ -60,6 +74,7 @@ header {
   font-size: 14px;
   color: black;
   text-decoration: none;
+  transition: 0.2s;
 }
 
 .menu-box a:hover {
@@ -101,7 +116,7 @@ header {
 }
 
 .header__language-button--hr {
-  opacity: 0.1;
+  opacity: 0.5;
 }
 
 .header__language-button--kr,
@@ -110,8 +125,63 @@ header {
   cursor: pointer;
 }
 
+.mb-header__menu-con {
+  display: none;
+}
+
 @media all and (max-width: 1023px) {
+  header {
+    height: auto;
+    padding: 12px 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header__logo img {
+    width: 163px;
+  }
+
+  .header__menu-con {
+    display: none;
+  }
+
   .header__sub-menu-con {
+    display: none;
+  }
+
+  .header__button-con {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .header__menu-box img {
+    display: block;
+  }
+
+  .header__menu-title {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+  }
+
+  .menu__btn-con img {
+    cursor: pointer;
+    display: block;
+    width: 20px;
+  }
+
+  .header__language-button-box {
+    font-size: 14px;
+    padding: 6px 10px;
+  }
+
+  .header__language-button-box img {
+    width: 18px;
+  }
+
+  .header__language-button--hr,
+  .header__language-button--en {
     display: none;
   }
 }
