--- a/renewal_main/style/slide.css
+++ b/renewal_main/style/slide.css
@@ -5,19 +5,19 @@
   height: 100vh;
 }
 
-.slide__item {
+.slide-item {
   position: absolute;
   min-width: 1280px;
   width: 100%;
   height: 100%;
 }
 
-.slide__item img {
+.slide-item img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.slide__text-box {
+.slide-text-box {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -29,13 +29,13 @@
   width: 1280px;
 }
 
-.text-box__title {
+.text-box-title {
   font-size: 54px;
   font-weight: bold;
   width: 700px;
 }
 
-.text-box__sub {
+.text-box-sub {
   font-size: 20px;
   width: 700px;
 }
@@ -47,7 +47,7 @@
   height: 100%;
 }
 
-.nav-con__bot {
+.nav-con-bot {
   position: absolute;
   display: flex;
   align-items: center;
@@ -57,31 +57,31 @@
   min-width: 1280px;
 }
 
-.nav-con__time-box {
+.nav-con-time-box {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-.nav-con__timebar-box {
+.nav-con-timebar-box {
   background-color: rgba(255, 255, 255, 0.3);
   width: 300px;
 }
 
-.timerbar-box__timebar {
+.timerbar-box-timebar {
   background: red;
   width: 0;
   height: 4px;
 }
 
-.nav-con__start {
+.nav-con-start {
   color: white;
   font-weight: bold;
   font-size: 18px;
   width: 20px;
 }
 
-.nav-con__end {
+.nav-con-end {
   color: rgba(255, 255, 255, 0.3);
   font-weight: bold;
   font-size: 18px;
@@ -105,23 +105,23 @@
 }
 
 @media screen and (max-width: 1023px) {
-  .slide__item {
+  .slide-item {
     width: 100%;
     min-width: 100%;
   }
-  .slide__text-box {
+  .slide-text-box {
     gap: 0px;
     left: 50%;
     top: 30%;
     min-width: 100%;
     width: 100%;
   }
-  .text-box__title {
+  .text-box-title {
     font-size: 24px;
     padding: 20px 20px;
     width: 80%;
   }
-  .text-box__sub {
+  .text-box-sub {
     font-size: 14px;
     padding: 0px 20px;
     width: 80%;
@@ -132,7 +132,7 @@
     height: 100%;
   }
 
-  .nav-con__bot {
+  .nav-con-bot {
     display: flex;
     justify-content: space-between;
     gap: 10px;
@@ -142,7 +142,7 @@
     min-width: 100%;
   }
 
-  .nav-con__time-box {
+  .nav-con-time-box {
     padding-left: 20px;
   }
 
@@ -150,20 +150,20 @@
     padding-right: 20px;
   }
 
-  .nav-con__timebar-box {
+  .nav-con-timebar-box {
     width: 100px;
   }
 
-  .timerbar-box__timebar {
+  .timerbar-box-timebar {
     height: 2px;
   }
 
-  .nav-con__start {
+  .nav-con-start {
     width: 15px;
     font-size: 14px;
   }
 
-  .nav-con__end {
+  .nav-con-end {
     width: 15px;
     font-size: 14px;
   }
