--- a/renewal_main/style/header.css
+++ b/renewal_main/style/header.css
@@ -49,7 +49,7 @@ header .right-box div {
   border-radius: 20px;
 }
 
-header .right-box img {
+header .right-box > img {
   width: 20px;
   display: none;
 }
